--- a/DynmapFilesToSQLite/DynmapFilesToSQLite.csproj
+++ b/DynmapFilesToSQLite/DynmapFilesToSQLite.csproj
@@ -81,7 +81,10 @@
     <Compile Include="Converter\Converter.cs" />
     <Compile Include="Converter\Reader\DynReader.cs" />
     <Compile Include="Converter\Reader\impl\FacesReader.cs" />
+    <Compile Include="Converter\Reader\impl\MapTypesReader.cs" />
+    <Compile Include="Converter\Reader\impl\MarkerFilesReader.cs" />
     <Compile Include="Converter\Reader\impl\MarkerIconsReader.cs" />
+    <Compile Include="Converter\Reader\impl\SchemaVersionWriter.cs" />
     <Compile Include="Converter\SQLiteWriter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
