--- a/DynmapFilesToSQLite/DynmapFilesToSQLite.csproj
+++ b/DynmapFilesToSQLite/DynmapFilesToSQLite.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Converter\Reader\impl\SchemaVersionWriter.cs" />
     <Compile Include="Converter\Reader\impl\TilesReader.cs" />
     <Compile Include="Converter\SQLiteWriter.cs" />
+    <Compile Include="Converter\TilesReaderSaveState.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
